--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -3,37 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %} {% endblock %} - ArteNativo</title>
+    <title>Ecommerce</title>
     {% load static %}
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <header>
-      <h1>Mi Ecommerce</h1>
-      <nav>
-        <ul>
-          <li><a href="{% url 'product_list' %}">Productos</a></li>
-          <li><a href="{% url 'auction_list' %}">Subastas</a></li>
-          <li><a href="{% url 'view_cart' %}">Carrito</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-center"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'product_list' %}"
+                  >Productos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'auction_list' %}">Subastas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'view_cart' %}">Carrito</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
 
-    <main>{% block content %} {% endblock %}</main>
+    <div class="container my-4">
+      <div class="container-main">{% block content %}{% endblock %}</div>
+    </div>
 
-    <footer>
-      <p>&copy; 2024 Mi Ecommerce</p>
+    <footer class="text-center py-3">
+      <div class="container">
+        <p class="mb-0">&copy; 2024 Mi Ecommerce</p>
+      </div>
     </footer>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
