--- a/products/templates/products/form_.html
+++ b/products/templates/products/form_.html
@@ -3,14 +3,67 @@
 {% block title %}{{ title }}{% endblock %}
 <!--  -->
 {% block content %}
-<!--  -->
-{% if form.instance.pk %}
-<h2>Editar Producto</h2>
-{% else %}
-<h2>Agregar Producto</h2>
-{% endif %}
-<form method="post" action="{{ target }}">
-  {% csrf_token %} {{ form.as_p }}
-  <button type="submit">Guardar</button>
-</form>
+<div class="container mt-5 d-flex justify-content-center">
+  <div class="col-md-6">
+    <h2 class="text-center mb-4">
+      {% if form.instance.pk %}
+      <span> Editar Producto </span>
+      {% else %}
+      <span> Agregar Producto </span>
+      {% endif %}
+    </h2>
+    <style>
+      .input-table-full-w tr > td:last-child > * {
+        width: 100%;
+      }
+    </style>
+    <form method="post" class="border p-4 rounded bg-light shadow">
+      {% csrf_token %}
+
+      <table class="table input-table-full-w">
+        <tbody>
+          <tr>
+            <td>
+              <label for="{{ form.name.id_for_label }}" class="form-label">
+                Nombre
+              </label>
+            </td>
+            <td>{{ form.name }}</td>
+          </tr>
+          <tr>
+            <td>
+              <label
+                for="{{ form.description.id_for_label }}"
+                class="form-label"
+              >
+                Descripción
+              </label>
+            </td>
+            <td>{{ form.description }}</td>
+          </tr>
+          <tr>
+            <td>
+              <label for="{{ form.price.id_for_label }}" class="form-label">
+                Precio
+              </label>
+            </td>
+            <td>{{ form.price }}</td>
+          </tr>
+          <tr>
+            <td>
+              <label for="{{ form.image.id_for_label }}" class="form-label">
+                Foto
+              </label>
+            </td>
+            <td>{{ form.image }}</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <div class="text-center mt-3">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+      </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
