--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -49,6 +49,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'view_cart' %}">Carrito</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'map_view' %}">Mapa</a>
+              </li>
             </ul>
           </div>
         </div>
