--- a/products/templates/products/results.html
+++ b/products/templates/products/results.html
@@ -9,6 +9,7 @@
     <h3>{{ product.name }}</h3>
     <p>{{ product.description }}</p>
     <p>Precio: ${{ product.price }}</p>
+    <p>Dirección: ${{ product.address }}</p>
   </li>
   {% endfor %} {% else %}
   <li class="list-group-item">No se encontraron productos.</li>
