--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -10,7 +10,7 @@
 <div
   class="text-center position-relative"
   style="
-    background-image: url('{% static 'images/fondo(5).jpg' %}');
+    background-image: url('{% static 'assets/fondo(5).jpg' %}');
     background-size: cover;
     background-position: center;
     height: 100vh;
