--- a/products/templates/products/form_.html
+++ b/products/templates/products/form_.html
@@ -2,6 +2,11 @@
 {% extends 'base.html' %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
+<style>
+  .input-table-full-w tr > td:last-child {
+    width: 100%;
+  }
+</style>
 <div class="container mt-5 d-flex justify-content-center">
   <div class="col-md-6">
     <h2 class="text-center mb-4">
@@ -11,7 +16,7 @@
       <span>Agregar Producto</span>
       {% endif %}
     </h2>
-    <form method="post" class="border p-4 rounded bg-light shadow">
+    <form method="post" class="border p-4 rounded bg-light shadow" enctype="multipart/form-data">
       {% csrf_token %}
       <table class="table input-table-full-w">
         <tbody>
@@ -33,7 +38,7 @@
           </tr>
           <tr>
             <td><label for="{{ form.address.id_for_label }}" class="form-label">Dirección</label></td>
-            <td><input type="text" id="address" name="address" class="form-control" placeholder="Introduce tu dirección" required></td>
+            <td>{{ form.address }}</td>
           </tr>
         </tbody>
       </table>
@@ -49,7 +54,7 @@
 
 <script>
   function initAutocomplete() {
-    const input = document.getElementById('address');
+    const input = document.getElementById('id_address');
     const autocomplete = new google.maps.places.Autocomplete(input);
     autocomplete.setFields(['place_id', 'geometry', 'name', 'formatted_address']);
     
