--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -31,7 +31,7 @@
         src=""
         alt=""
         class="img-thumbnail mr-3"
-        style="width: 200px; height: 200px; object-fit: cover"
+        style="width: 200px; height: 200px; object-fit: cover; margin-right: 1rem;"
       />
       <div class="ml-3">
         <h3 class="product-name"></h3>
